# native-opencv-android-template

./: LICENSE.md  README.md  build.gradle  gradle.properties  settings.gradle
app/: .gitignore  build.gradle
app/src/androidTest/java/com/example/nativeopencvandroidtemplate/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/nativeopencvandroidtemplate/: MainActivity.java  MainActivity.kt
app/src/main/kotlin/com/example/nativeopencvandroidtemplate/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
app/src/test/java/com/example/nativeopencvandroidtemplate/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
